# afancontrol

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile.debian  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  afancontrol  afancontrol.cfg  afancontrol.conf  afancontrol.initd  afancontrol.py  afancontrol.service  afancontrol_fantest  afancontrol_fantest.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
afancontrol/: __main__.py  app.py  exec.py  logger.py  pwmfan.py  temp.py
afancontrol/manager/: fans.py  manager.py  report.py  trigger.py
arduino/: Readme.md  micro.ino
debian/: .gitignore  changelog  control  copyright  install  rules  watch
debian/patches/: remove-setup-py-data-files.patch  series
docs/: conf.py  index.rst
docs/_static/: custom.css
pkg/: afancontrol.conf  afancontrol.service
src/afancontrol/: __init__.py  __main__.py  app.py  arduino.py  config.py  configparser.py  daemon.py  exec.py  fans.py  fantest.py  filters.py  manager.py  metrics.py  pwmfan.py  pwmfannorm.py  report.py  temp.py  temps.py  trigger.py
src/afancontrol/manager/: fans.py  manager.py  report.py  trigger.py
src/afancontrol/pwmfan/: __init__.py  arduino.py  base.py  ipmi.py  linux.py
src/afancontrol/temp/: __init__.py  base.py  command.py  file.py  hdd.py
tests/: conftest.py  test_app.py  test_arduino.py  test_config.py  test_daemon.py  test_exec.py  test_fans.py  test_fantest.py  test_filters.py  test_manager.py  test_metrics.py  test_pwmfan.py  test_report.py  test_temp.py  test_trigger.py
tests/data/: afancontrol-example.conf
tests/manager/: test_fans.py  test_manager.py  test_report.py  test_trigger.py
tests/pwmfan/: test_arduino.py  test_ipmi.py  test_linux.py
tests/temp/: test_base.py  test_command.py  test_file.py  test_hdd.py
